# mdsearch

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxygen
include/: bithash.hpp  boundary.hpp  bucket_kdtree.hpp  bucket_kdtree_strategies.hpp  dataset.hpp  hashstruct.hpp  kdtree.hpp  multigrid.hpp  point.hpp  pyramidtree.hpp  timing.hpp  types.hpp  util.hpp
src/: test_core.cpp  test_structures.cpp
